--- a/css/maxbox.css
+++ b/css/maxbox.css
@@ -1,30 +1,35 @@
+/* When un opened */
 .maxbox li:nth-child(1) {
-    background: url("https://picsum.photos/400/?random=1") no-repeat 0 0;
+    background: url("../img/box/side.png") no-repeat 0 0;
     transform: translateZ(50px);
 }
 
+/* Side rev */
 .maxbox li:nth-child(2) {
-    background: url("https://picsum.photos/400/?random=2") no-repeat 0 0;
+    background: url("../img/box/side_rev.png") no-repeat 0 0;
     transform: translateZ(50px);
 }
 
+
+/* Bot */
 .maxbox li:nth-child(3) {
-    background: url("https://picsum.photos/400/?random=3") no-repeat 0 0;
+    background: url("../img/box/bot.png") no-repeat 0 0;
     transform: rotateX(-90deg) translateZ(50px);
 }
 
+/* Top */
 .maxbox li:nth-child(4) {
-    background: url("https://picsum.photos/400/?random=4") no-repeat 0 0;
+    background: url("../img/box/top.png") no-repeat 0 0;
     transform: rotateX(90deg) translateZ(50px);
 }
 
 .maxbox li:nth-child(5) {
-    background: url("https://picsum.photos/400/?random=5") no-repeat 0 0;
+    background: url("../img/box/side.png") no-repeat 0 0;
     transform: rotateY(-90deg) translateZ(50px);
 }
 
 .maxbox li:nth-child(6) {
-    background: url("https://picsum.photos/400/?random=6") no-repeat 0 0;
+    background: url("../img/box/side.png") no-repeat 0 0;
     transform: rotateY(90deg) translateZ(50px);
 }
 
@@ -36,7 +41,7 @@
     position: absolute;
     left: 0;
     top: 0;
-    opacity: 0.2;
+    opacity: 0.8;
     transition: all 1s ease;
 }
 
@@ -62,4 +67,67 @@
 
 .maxbox li:nth-child(6) {
     transform: rotateY(90deg) translateZ(100px);
+}
+
+/* When hover */
+
+.box:hover ol li:nth-child(1) {
+    background: url("../img/400/side1.png") no-repeat 0 0;
+    transform: translateZ(300px);
+    transform: translateZ(300px);
+    width: 400px;
+    height: 400px;
+    opacity: 0.9;
+    left: -100px;
+    top: -100px;
+}
+
+.box:hover ol li:nth-child(2) {
+    background: url("../img/400/side2.png") no-repeat 0 0;
+    transform: rotateX(180deg) translateZ(300px);
+    width: 400px;
+    height: 400px;
+    opacity: 0.9;
+    left: -100px;
+    top: -100px;
+}
+
+.box:hover ol li:nth-child(3) {
+    background: url("../img/400/bot3.png") no-repeat 0 0;
+    transform: rotateX(-90deg) translateZ(300px);
+    width: 400px;
+    height: 400px;
+    opacity: 0.9;
+    left: -100px;
+    top: -100px;
+}
+
+.box:hover ol li:nth-child(4) {
+    background: url("../img/400/top4.png") no-repeat 0 0;
+    transform: rotateX(90deg) translateZ(300px);
+    width: 400px;
+    height: 400px;
+    opacity: 0.9;
+    left: -100px;
+    top: -100px;
+}
+
+.box:hover ol li:nth-child(5) {
+    background: url("../img/400/side5.png") no-repeat 0 0;
+    transform: rotateY(-90deg) translateZ(300px);
+    width: 400px;
+    height: 400px;
+    opacity: 0.9;
+    left: -100px;
+    top: -100px;
+}
+
+.box:hover ol li:nth-child(6) {
+    background: url("../img/400/side6.png") no-repeat 0 0;
+    transform: rotateY(90deg) translateZ(300px);
+    width: 400px;
+    height: 400px;
+    opacity: 0.9;
+    left: -100px;
+    top: -100px;
 }
