--- a/css/minbox.css
+++ b/css/minbox.css
@@ -16,31 +16,31 @@
 }
 
 .minbox li:nth-child(1) {
-    background: url("https://picsum.photos/100/?random=1") no-repeat 0 0;
+    background: url("../img/100/side1.png") no-repeat 0 0;
     transform: translateZ(50px);
 }
 
 .minbox li:nth-child(2) {
-    background: url("https://picsum.photos/100//?random=2") no-repeat 0 0;
+    background: url("../img/100/side2.png") no-repeat 0 0;
     transform: rotateX(180deg) translateZ(50px);
 }
 
 .minbox li:nth-child(3) {
-    background: url("https://picsum.photos/100//?random=3") no-repeat 0 0;
+    background: url("../img/100/bot3.png") no-repeat 0 0;
     transform: rotateX(-90deg) translateZ(50px);
 }
 
 .minbox li:nth-child(4) {
-    background: url("https://picsum.photos/100//?random=4") no-repeat 0 0;
+    background: url("../img/100/top4.png") no-repeat 0 0;
     transform: rotateY(-90deg) translateZ(50px);
 }
 
 .minbox li:nth-child(5) {
-    background: url("https://picsum.photos/100//?random=5") no-repeat 0 0;
+    background: url("../img/100/side5.png") no-repeat 0 0;
     transform: rotateY(90deg) translateZ(50px);
 }
 
 .minbox li:nth-child(6) {
-    background: url("https://picsum.photos/100//?random=6") no-repeat 0 0;
+    background: url("../img/100/side6.png") no-repeat 0 0;
     transform: rotateY(90deg) translateZ(50px);
 }
