--- a/css/maxbox.css
+++ b/css/maxbox.css
@@ -1,35 +1,35 @@
 /* When un opened */
 .maxbox li:nth-child(1) {
-    background: url("../img/box/side.png") no-repeat 0 0;
+    background: url("../img/box/side.jpg") no-repeat 0 0;
     transform: translateZ(50px);
 }
 
 /* Side rev */
 .maxbox li:nth-child(2) {
-    background: url("../img/box/side_rev.png") no-repeat 0 0;
+    background: url("../img/box/side_rev.jpg") no-repeat 0 0;
     transform: translateZ(50px);
 }
 
 
 /* Bot */
 .maxbox li:nth-child(3) {
-    background: url("../img/box/bot.png") no-repeat 0 0;
+    background: url("../img/box/bot.jpg") no-repeat 0 0;
     transform: rotateX(-90deg) translateZ(50px);
 }
 
 /* Top */
 .maxbox li:nth-child(4) {
-    background: url("../img/box/top.png") no-repeat 0 0;
+    background: url("../img/box/top.jpg") no-repeat 0 0;
     transform: rotateX(90deg) translateZ(50px);
 }
 
 .maxbox li:nth-child(5) {
-    background: url("../img/box/side.png") no-repeat 0 0;
+    background: url("../img/box/side.jpg") no-repeat 0 0;
     transform: rotateY(-90deg) translateZ(50px);
 }
 
 .maxbox li:nth-child(6) {
-    background: url("../img/box/side.png") no-repeat 0 0;
+    background: url("../img/box/side.jpg") no-repeat 0 0;
     transform: rotateY(90deg) translateZ(50px);
 }
 
@@ -72,7 +72,7 @@
 /* When hover */
 
 .box:hover ol li:nth-child(1) {
-    background: url("../img/400/side1.png") no-repeat 0 0;
+    background: url("../img/400/side1.jpg") no-repeat 0 0;
     transform: translateZ(300px);
     transform: translateZ(300px);
     width: 400px;
@@ -83,7 +83,7 @@
 }
 
 .box:hover ol li:nth-child(2) {
-    background: url("../img/400/side2.png") no-repeat 0 0;
+    background: url("../img/400/side2.jpg") no-repeat 0 0;
     transform: rotateX(180deg) translateZ(300px);
     width: 400px;
     height: 400px;
@@ -93,7 +93,7 @@
 }
 
 .box:hover ol li:nth-child(3) {
-    background: url("../img/400/bot3.png") no-repeat 0 0;
+    background: url("../img/400/bot3.jpg") no-repeat 0 0;
     transform: rotateX(-90deg) translateZ(300px);
     width: 400px;
     height: 400px;
@@ -103,7 +103,7 @@
 }
 
 .box:hover ol li:nth-child(4) {
-    background: url("../img/400/top4.png") no-repeat 0 0;
+    background: url("../img/400/top4.jpg") no-repeat 0 0;
     transform: rotateX(90deg) translateZ(300px);
     width: 400px;
     height: 400px;
@@ -113,7 +113,7 @@
 }
 
 .box:hover ol li:nth-child(5) {
-    background: url("../img/400/side5.png") no-repeat 0 0;
+    background: url("../img/400/side5.jpg") no-repeat 0 0;
     transform: rotateY(-90deg) translateZ(300px);
     width: 400px;
     height: 400px;
@@ -123,7 +123,7 @@
 }
 
 .box:hover ol li:nth-child(6) {
-    background: url("../img/400/side6.png") no-repeat 0 0;
+    background: url("../img/400/side6.jpg") no-repeat 0 0;
     transform: rotateY(90deg) translateZ(300px);
     width: 400px;
     height: 400px;
