--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,8 @@ body {
     height: 100%;
     margin: 0;
     padding: 0;
+    background-image: url("../img/bg.jpg");
+    background-size: cover;
 }
 
 li {
