--- a/css/text.css
+++ b/css/text.css
@@ -1,11 +1,16 @@
-@import url(https://fonts.googleapis.com/css?family=Arvo:700);
-@import url(https://fonts.googleapis.com/css?family=Seaweed+Script);
-
 .text-container{
     position: absolute;
     bottom: 0%;  /* position the top  edge of the element at the middle of the parent */
     left: 50%; /* position the left edge of the element at the middle of the parent */
     transform: translate(-50%, -50%);
-    font-family: "Seaweed Script";
-    font-size: 40px;
+    font-family: "Dancing Script";
+    font-size: 35px;
+    font-weight: 1000;
 }
+
+@media screen and (max-width: 600px) {
+    .text-container {
+        font-size: 20px;
+        font-weight: 700;
+    }
+  }
