--- a/css/maxbox.css
+++ b/css/maxbox.css
@@ -37,7 +37,7 @@
     width: 200px;
     height: 200px;
     background: #fff;
-    border: 1px solid #ccc;
+    /* border: 1px solid #ccc; */
     position: absolute;
     left: 0;
     top: 0;
